[gd_scene load_steps=19 format=3 uid="uid://c328w4wug5l82"]

[ext_resource type="Script" uid="uid://bimts35x6clpe" path="res://UI/LoadingScreen/loading_screen.gd" id="1_5xpxy"]
[ext_resource type="Script" uid="uid://f6l007kxnf4c" path="res://Components/ObjectPreloader/object_preloader.gd" id="2_jlcfg"]
[ext_resource type="PackedScene" uid="uid://clperpfmg1asg" path="res://Resources/Models/Anky/AnkySpikeModel.fbx" id="3_jlcfg"]
[ext_resource type="Texture2D" uid="uid://rbaxlkme85nd" path="res://Misc/Icon.png" id="3_nrut1"]
[ext_resource type="PackedScene" uid="uid://c4hwqoskl2i2h" path="res://Scenes/Bosses/Anky/anky_spike.tscn" id="4_gpexy"]
[ext_resource type="PackedScene" uid="uid://cfm6pfnksuvpv" path="res://Scenes/Bosses/Anky/anky_spike_geranade.tscn" id="5_hf5ku"]
[ext_resource type="PackedScene" uid="uid://bknvt8s1gqm3f" path="res://Resources/Models/Props/Beer/Beer.fbx" id="6_pnitq"]
[ext_resource type="PackedScene" uid="uid://by4cfs7s0nxir" path="res://Scenes/Arena/Particles/confetti_particles.tscn" id="7_qo5te"]
[ext_resource type="PackedScene" uid="uid://dn1d3oi4dspne" path="res://Scenes/Bosses/Particles/big_explosion_particles.tscn" id="8_b66u8"]
[ext_resource type="PackedScene" uid="uid://58njlxv5dsos" path="res://Scenes/Bosses/Particles/explosion_particles.tscn" id="9_vmcbh"]
[ext_resource type="PackedScene" uid="uid://cs4gpeiprg38m" path="res://Scenes/Bosses/Particles/roll_particles.tscn" id="10_ltnus"]
[ext_resource type="PackedScene" uid="uid://b4pqd3fasde7g" path="res://Scenes/Bosses/Particles/slam_particles.tscn" id="11_fbtk1"]
[ext_resource type="PackedScene" uid="uid://cb074rhhyi1ex" path="res://Scenes/Bosses/Particles/spike_dissapear_particles.tscn" id="12_20wn8"]
[ext_resource type="PackedScene" uid="uid://d3qhok26qo35j" path="res://Scenes/Bosses/Particles/stomp_particles.tscn" id="13_afsws"]
[ext_resource type="Texture2D" uid="uid://cd2xbuud0d8p8" path="res://Resources/Sprites/UI/DinoNuggie_118px.png" id="15_jlcfg"]
[ext_resource type="PackedScene" uid="uid://c2abwchgqxe5i" path="res://Components/Transitions/transition_component.tscn" id="16_l6laa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6laa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jlcfg"]

[node name="LoadingScreen" type="Node3D" node_paths=PackedStringArray("beerRect", "objPreloader", "camera", "loadSlider")]
script = ExtResource("1_5xpxy")
beerRect = NodePath("ColorRect/BeerRect")
objPreloader = NodePath("ObjectPreloader")
camera = NodePath("Camera3D")
loadSlider = NodePath("ColorRect/LoadSlider")

[node name="ObjectPreloader" type="Node3D" parent="."]
script = ExtResource("2_jlcfg")
objects = Array[PackedScene]([ExtResource("3_jlcfg"), ExtResource("4_gpexy"), ExtResource("5_hf5ku"), ExtResource("6_pnitq"), ExtResource("7_qo5te"), ExtResource("8_b66u8"), ExtResource("9_vmcbh"), ExtResource("10_ltnus"), ExtResource("11_fbtk1"), ExtResource("12_20wn8"), ExtResource("13_afsws")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BeerRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1381.0
offset_top = 701.0
offset_right = 1571.0
offset_bottom = 891.0
texture = ExtResource("3_nrut1")
expand_mode = 4
stretch_mode = 5

[node name="LoadSlider" type="HSlider" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 279.0
offset_top = -205.0
offset_right = -279.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/grabber_offset = -50
theme_override_icons/grabber = ExtResource("15_jlcfg")
theme_override_styles/slider = SubResource("StyleBoxEmpty_l6laa")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_jlcfg")
value = 10.0

[node name="TransitionComponent" parent="ColorRect" instance=ExtResource("16_l6laa")]
unique_name_in_owner = true
layout_mode = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.47799)
fov = 103.103

[editable path="ColorRect/TransitionComponent"]
